src/test/deca/context/valid/created/sans_objet/affectation_boolean_4.deca
// Description:
//    Programme minimaliste utilisant boolean.
//
// Resultats:
//   
//
// Historique:
//    cree le 13/01/2024

{       
        int a =1;
        int b=2;
        boolean x ;
        x= a>=b;
}